--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -10,7 +10,7 @@ resources:
   type: registry-image
   icon: docker
   source:
-    repository: ((docker.user))/concourse-nomad-resource
+    repository: ((docker.user))/gitea-release-resource
     tag: latest
     username: ((docker.user))
     password: ((docker.pass))
